--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 Django==2.0.1
 django-filter==1.1.0
+django-mysql==2.2.0
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
 Markdown==2.6.11
+mysqlclient==1.3.12
+Pillow==5.0.0
 PyJWT==1.5.3
 pytz==2017.3
