将permissionlist接口整合进user模块。

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ giftplatform/__pycache__/settings.cpython-36.pyc
 giftplatform/__pycache__/__init__.cpython-36.pyc
 viplevels/migrations/__pycache__/__init__.cpython-36.pyc
 .idea/workspace.xml
+.idea/workspace.xml
