--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+certifi==2018.1.18
+chardet==3.0.4
 Django==2.0.1
+django-cors-headers==2.2.0
 django-filter==1.1.0
 django-mysql==2.2.0
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
+idna==2.6
+itchat==1.3.10
 Markdown==2.6.11
 mysqlclient==1.3.12
 Pillow==5.0.0
 PyJWT==1.5.3
+pypng==0.0.18
+PyQRCode==1.2.1
 pytz==2017.3
+requests==2.18.4
+urllib3==1.22
