--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aliyun-python-sdk-core-v3==2.8.6
+aliyun-python-sdk-dysmsapi==1.0.0
 astroid==1.6.1
 certifi==2018.1.18
 chardet==3.0.4
@@ -14,11 +16,12 @@ itchat==1.3.10
 lazy-object-proxy==1.3.1
 lxml==4.2.1
 Markdown==2.6.11
-mccabe==0.6.1
+mns==1.1.4
 mysqlclient==1.3.12
 Pillow==5.0.0
+pycrypto==2.6.1
+pycryptodome==3.5.1
 PyJWT==1.5.3
-pylint==1.8.2
 pypng==0.0.18
 PyQRCode==1.2.1
 python-pptx==0.6.7
@@ -27,4 +30,4 @@ requests==2.18.4
 six==1.11.0
 urllib3==1.22
 wrapt==1.10.11
-XlsxWriter==1.0.2
+XlsxWriter==1.0.3
